--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Rebekah Larsen, Media and User Researcher"
 title_separator          : "-"
 name                     : &name "Rebekah Larsen"
 description              : &description "personal description"
-url                      : rebekahlarsen.me # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://ral73.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "ral73/ral73.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
