--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Rebekah Larsen"
   avatar           : "profile.png"
-  bio              : "PhD Candidate @ University of Cambridge, Department of Sociology. Interested in reflexive and empathetic research and design."
+  bio              : "PhD @ University of Cambridge, Department of Sociology. Interested in reflexive and empathetic research and design."
   location         : "Boston, MA"
   employer         : "University of Cambridge"
   pubmed           : 
