--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Rebekah Larsen"
   avatar           : "profile.png"
-  bio              : "PhD @ Oslo Metropolitan University in the Department of Journalism and Media. Also an Affiliate Researcher at Centre for Governance and Human Rights, Cambridge University."
+  bio              : "PhD @ Oslo Metropolitan University, Department of Journalism and Media. Also Affiliate Researcher at the Centre for Governance and Human Rights, Cambridge University."
   location         : "Boston, MA"
   employer         : "Oslo Metropolitan University"
   pubmed           : 
