--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Rebekah Larsen"
   avatar           : "profile.png"
-  bio              : "PhD @ Oslo Metropolitan University, Department of Journalism and Media. Research Association @ University of Cambridge, Centre for Governance and Human Rights."
+  bio              : "Postdoc @ MIT + Oslo Metropolitan University, Department of Journalism and Media. Research Association @ University of Cambridge, Centre for Governance and Human Rights."
   location         : "Boston, MA"
   employer         : "Oslo Metropolitan University"
   pubmed           : 
