--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.png"
   bio              : "Postdoc @ MIT + Oslo Metropolitan University, Department of Journalism and Media. Research Association @ University of Cambridge, Centre for Governance and Human Rights."
   location         : "Boston, MA"
-  employer         : "Oslo Metropolitan University"
+  employer         : "MIT + Oslo Metropolitan University"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=8NBx6CMAAAAJ&hl=en"
   department       : "https://research.sociology.cam.ac.uk/profile/rebekah-larsen" 
