--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Rebekah Larsen"
   avatar           : "profile.png"
-  bio              : "Postdoc/Lecturer @ MIT + Oslo Metropolitan University, Department of Journalism and Media. Research Associate @ University of Cambridge, Centre for Governance and Human Rights."
+  bio              : "Postdoc/Lecturer @ MIT, Comparative Media Studies. Research Associate @ University of Cambridge, Centre for Governance and Human Rights."
   location         : "Boston, MA"
-  employer         : "MIT + Oslo Metropolitan University"
+  employer         : "MIT"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=8NBx6CMAAAAJ&hl=en"
-  department       : "https://research.sociology.cam.ac.uk/profile/rebekah-larsen" 
+  department       :  
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
