--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Rebekah Larsen"
   avatar           : "profile.png"
-  bio              : "Postdoc/Lecturer @ MIT, Comparative Media Studies. Research Associate @ University of Cambridge, Centre for Governance and Human Rights."
+  bio              : "Fellow @ BKC Harvard + ISP Yale Law School"
   location         : "Boston, MA"
   employer         : "MIT"
   pubmed           : 
