--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Rebekah Larsen, Media Sociologist"
 title_separator          : "-"
 name                     : &name "Rebekah Larsen"
 description              : &description "personal description"
-url                      : https://ral73.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://rebekahlarsen.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "ral73/ral73.github.io"
+repository               : "ral73/rebekahlarsen.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -82,9 +82,9 @@ analytics:
 author:
   name             : "Rebekah Larsen"
   avatar           : "profile.png"
-  bio              : "Fellow @ BKC Harvard + ISP Yale Law School"
-  location         : "Boston, MA"
-  employer         : "MIT"
+  bio              : "Marie Curie Fellow (University of Copenhagen) + Affiliate at Berkman Klein Center (Harvard)"
+  location         : "Boston, MA and Copenhagen, DK"
+  employer         : "University of Copenhagen"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=8NBx6CMAAAAJ&hl=en"
   department       :  
