--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Rebekah Larsen"
   avatar           : "profile.png"
-  bio              : "Marie Curie Fellow (University of Copenhagen) + Affiliate at Berkman Klein Center (Harvard)"
+  bio              : "Marie Curie Fellow (University of Copenhagen)"
   location         : "Boston, MA and Copenhagen, DK"
   employer         : "University of Copenhagen"
   pubmed           : 
