--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ name                     : &name "Rebekah Larsen"
 description              : &description "personal description"
 url                      : https://rebekahlarsen.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "ral73/rebekahlarsen.github.io"
+repository               : "rebekahlarsen.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Rebekah Larsen"
   avatar           : "profile.png"
-  bio              : "Marie Curie Fellow (University of Copenhagen)"
+  bio              : "Marie Curie Fellow (University of Copenhagen) and Affiliate, Berkman Klein Center (Harvard)"
   location         : "Boston, MA and Copenhagen, DK"
   employer         : "University of Copenhagen"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=8NBx6CMAAAAJ&hl=en"
-  department       :  
+  department       :  "https://cyber.harvard.edu/people/rebekah-larsen"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
