--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,8 +7,9 @@ main:
   - title: "Publications"
     url: /publications/     
     
-  - title: "Talks and Presentations"
-    url: /talks/
+  <!--- 
+  title: "Talks and Presentations"
+    url: /talks/ -->
 
   - title: "Teaching"
     url: /teaching/ 
