--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 # main links links
 main: 
 
-  - title: "Projects"
-    url: /projects/
+  - title: "Research"
+    url: /research/
 
   - title: "Publications"
     url: /publications/     
